Fix images on mobile

--- a/public/SCSS/register-workshops.scss
+++ b/public/SCSS/register-workshops.scss
@@ -66,7 +66,7 @@ th {
 
 .workshop-presenter-photo {
     object-fit: contain;
-    height: 200px;
+    height: 150px;
     background-position: center center;
     margin-top: 15px;
     border-radius: 3rem;
